# pbsgui

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/: RELEASE_NOTES.md
.github/workflows/: ci.yml  release.yml
crates/pbs-client/: Cargo.toml
crates/pbs-client/examples/: backup_image.rs  dynamic_backup.rs
crates/pbs-client/src/: api.rs  blob.rs  chunker.rs  crypt.rs  error.rs  index.rs  lib.rs  manifest.rs  repository.rs  session.rs
crates/pbs-client/tests/: live_roundtrip.rs
crates/pbsgui-ad-engine/: Cargo.toml
crates/pbsgui-ad-engine/src/: adproto.rs  capture.rs  dit.rs  main.rs  matchspec.rs  profile.rs  restore.rs  stream.rs  vss.rs
crates/pbsgui-core/: Cargo.toml
crates/pbsgui-core/src/: config.rs  lib.rs  secrets.rs  signed.rs
crates/pbsgui-engine/: Cargo.toml  build.rs
crates/pbsgui-engine/src/: archive.rs  backup.rs  changedet.rs  config.rs  connstore.rs  enckey.rs  fsbackup.rs  handler.rs  ipc.rs  jobs.rs  jobstore.rs  main.rs  metrics.rs  netdest.rs  notify.rs  pbs.rs  restore.rs  scheduler.rs  scripts.rs  secrets.rs  service.rs  signed.rs  sqlsched.rs
crates/pbsgui-engine/src/relay/: agent.rs  backup.rs  mod.rs  proto.rs  server.rs  setup.rs  tls.rs
crates/pbsgui-engine/src/sql/: backupmeta.rs  check.rs  discover.rs  mod.rs  probe.rs  ssrp.rs  vdi.rs
crates/pbsgui-ipc/: Cargo.toml
crates/pbsgui-ipc/src/: lib.rs  protocol.rs  transport.rs
crates/pbsgui-ipc/tests/: generic.rs  loopback.rs
docs/: ARCHITECTURE.md  DEVELOPERS.md  DEVELOPMENT.md  README.md  STATUS.md  TESTING.md
docs/screenshots/: README.md
scripts/: build-windows-installer.bat  sql-pitr-probe.ps1
src-tauri/: Cargo.toml  build.rs  engine-sidecar.conf.json  service-hooks.nsh  sign-windows.ps1  signing.conf.json  tauri.conf.json  tauri.windows.conf.json  webview-online.conf.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js  styles.css
