[package]
name = "pbsgui"
description = "pbsgui desktop GUI: control and monitor backups to Proxmox Backup Server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

# The library holds the app so it can be shared with mobile targets if ever needed.
[lib]
name = "pbsgui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
pbsgui-ipc = { path = "../crates/pbsgui-ipc" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
# Native file/folder picker (WinAPI on Windows, GTK on Linux for dev).
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
