[package]
name = "pbsgui-ad-engine"
description = "pbsgui Active Directory backup engine: VSS System State capture, offline ntds.dit browse, and partial restore, streaming to a Proxmox Backup Server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "pbsgui-ad-engine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
