[package]
name = "pbsgui-ad-engine"
description = "pbsgui Active Directory backup engine: VSS System State capture, offline ntds.dit browse, and partial restore, streaming to a Proxmox Backup Server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "pbsgui-ad-engine"
path = "src/main.rs"

[dependencies]
pbs-client = { path = "../pbs-client" }
pbsgui-ipc = { path = "../pbsgui-ipc" }
pbsgui-core = { path = "../pbsgui-core" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Stream the System State file set to PBS as one tar archive.
tar = "0.4"

[target.'cfg(windows)'.dependencies]
# COM bindings for the VSS requester (System State snapshots). The vsbackup.h
# interfaces themselves are hand-declared in src/vss.rs (they are absent from the
# crate's metadata); these features supply IVssAsync, the VSS enums/structs, COM
# init, and volume lookup.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Storage_Vss",
    "Win32_Storage_FileSystem",
] }
# Required directly: the #[interface] macro expands to `windows_core::` paths.
windows-core = "0.58"
