[package]
name = "pbsgui-engine"
description = "pbsgui privileged backup engine: PBS client, SQL Server VDI, VSS, scheduler, IPC"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "pbsgui-engine"
path = "src/main.rs"

[dependencies]
pbs-client = { path = "../pbs-client" }
pbsgui-ipc = { path = "../pbsgui-ipc" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
walkdir = "2"
glob = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(windows)'.dependencies]
# Secrets in the Windows Credential Manager.
keyring = { version = "3", features = ["windows-native"] }
# Run as a Windows Service under the SCM.
windows-service = "0.7"
# Enabled as the SQL/VSS modules are implemented:
#   windows  COM bindings for SQLVDI.dll (VDI streaming) and VSS
# windows = { version = "0.58", features = ["Win32_System_Com", "Win32_Storage_Vss"] }
