[package]
name = "pbsgui-engine"
description = "pbsgui privileged backup engine: PBS client, SQL Server VDI, VSS, scheduler, IPC"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "pbsgui-engine"
path = "src/main.rs"

[dependencies]
pbs-client = { path = "../pbs-client" }
pbsgui-ipc = { path = "../pbsgui-ipc" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
walkdir = "2"
glob = "0.3"
sha2 = "0.10"
# Sign the on-disk JSON stores (HMAC-SHA256) so tampering or corruption is caught.
hmac = "0.12"
base64 = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Notifications: HTTP (Slack/generic webhook) and SMTP email. rustls TLS to match
# the rest of the stack (no OpenSSL/native-tls).
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
] }
# TDS client for SQL Server: identity/topology/database queries (the probe step)
# and, later, issuing BACKUP ... TO VIRTUAL_DEVICE. rustls TLS to match pbs-client.
tiberius = { version = "0.12", default-features = false, features = [
    "tds73",
    "rustls",
    "sql-browser-tokio",
] }
# Adapts a tokio TcpStream to the futures-io traits tiberius expects.
tokio-util = { version = "0.7", features = ["compat"] }

[target.'cfg(windows)'.dependencies]
# Secrets in the Windows Credential Manager.
keyring = { version = "3", features = ["windows-native"] }
# Run as a Windows Service under the SCM.
windows-service = "0.7"
# Read SQL Server instance names, ports, and login mode from the registry.
winreg = "0.52"
# Windows integrated authentication (SSPI/NTLM) for SQL Server connections.
tiberius = { version = "0.12", default-features = false, features = ["winauth"] }
# COM bindings for the SQLVDI.dll virtual device interface (VDI streaming backup)
# and the security APIs used to restrict the config directory's ACL.
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
# Required directly: the #[interface] macro expands to `windows_core::` paths.
windows-core = "0.58"
# Enabled as the SQL/VSS modules are implemented:
#   windows  COM bindings for SQLVDI.dll (VDI streaming) and VSS
# windows = { version = "0.58", features = ["Win32_System_Com", "Win32_Storage_Vss"] }
