[package]
name = "pbsgui-ipc"
description = "IPC protocol and transport between the pbsgui GUI and backup engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
interprocess.workspace = true
